2016-08-31  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/atmosphere.py: Added new module.

	Module containing functions directly related to atmospheric sciences.

	* typhon/__init__.py: Import atmosphere module.

	* typhon/constants.py: Added clearnames for gas constants.

	* typhon/thermodynamics.py:

	Added function to calculate the density of gases by application of ideal
	gas law.

	* doc/atmosphere.rst: Documentation for new module.

	* doc/modules.rst: Added new module to table of contents.

2016-08-28  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/math/__init__.py:

	Added a function to calculate column integrals.

2016-08-27  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/constants.py:

	Added aliases for some constants to make them usable via their clear name.

	* typhon/physics/__init__.py:

	Added planck functions for frequency and wavelength.

2016-08-23  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/plots/__init__.py(get_subplot_arrangement):

	- Added a function to calculate a
	perhaps-not-entirely-optimal-but-still-acceptable subplot arrangement
	depending on how many subplots are to be arranged.

	* typhon/datasets/tovs.py(HIRS._read):

	- Check whether times make sense.  Raise error if they don't.

2016-08-18  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/geodesy/__init__.py:

	Added functions to calculate grate-circle distance, and geographical mean
	of coordinates.

2016-08-18  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/cm/__init__.py:

	Added functions to export matplotlib colormaps to txt and cpt files.

2016-08-17  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/utils/cache.py:

	- Add warning on memory usage, as this one keeps a copy in case an
	object is mutable

	- Add capability to suppress or clear cache on a single call

	* typhon/plots/__init__.py(plot_distribution_as_percentiles):

	- Fix bug when no label is passed

	* typhon/datasets/tovs.py:

	- Only do progressbar when sys.stdout is a terminal
